[project]
name = "hvac-voice-agent"
version = "1.0.0"
description = "HVAC voice call agent — Twilio PSTN + Pipecat + Deepgram + GPT-4o-mini + Cartesia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[cartesia,deepgram,openai,silero,websocket]>=1.5.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "aiohttp>=3.11.0",
]
